fix 'visible' spelling for modals (#82)

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -129,8 +129,8 @@
     z-index: $modal-z-index - 10;
     background-color: $modal-backdrop-bg-color;
 
-    // Modal visable is the parent class to make backdrop and modal visable
-    &.c-modal-visable {
+    // Modal visible is the parent class to make backdrop and modal visible
+    &.c-modal-visible {
       opacity: 1;
       visibility: visible;
 
